k8_deploy_files/dj-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: djapp
    env: prod
    tier: backend
    owner: Daniil
  name: djapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: djapp
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: djapp
    spec:
      containers:
        - name: web
          image: traderdaniil/k8s-djangoapp:v5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: djapp
  name: djapp
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: djapp
  type: ClusterIP
