k8_deploy_files/dj-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: djapp
  name: djapp
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: djapp
  type: ClusterIP
